Moocore module (#407)
* Experimental moocore module

* Improve edge cases to match upstream behaviour

* Change 4d & 5d behaviour

* Add specific case for 4d hypervolume, performance improvements

* Hypervolume 2d and 3d contributions

* Replace default Random generator usage

* readme update

* cross lang benchmark

* Port C’s additive-epsilon pruning and specialized minimization/maximization paths

* Port the upstream direct 2D dimension sweep and Jensen ranking paths using primitive stable sorting

* Port upstream HV3D+ algorithm for exact three-dimensional hypervolume

* Perf improv

* Round 1 optimizations

* Round 2 optimizations

* Round 4 optimizations

* Round 5 optimizations

* Explicit enable surefire arg --add-modules jdk.incubator.vector

* Gaps calculation, use for final report

* Remove test shards

* Improve flaky metrics test, add description error when metrics objective does not exist

* Fix two typos reported by copilot and update CHANGELOG.md